add content for plan

--- a/thesis-a/report/approach.tex
+++ b/thesis-a/report/approach.tex
@@ -25,7 +25,7 @@ Statistical profiling offers a low overhead approach to profiling, however there
 
 \section{Requirements}
 
-Following on from the design goals, we can now list concrete requirements for the implementation of a statistical profiler.
+Following on from the design goals, we can now list concrete requirements for the implementation of a profiler for seL4.
 
 \textbf{Requirement 1}. Supports both statistical and event-based profiling.\\
 The additional expressivity that arises when supporting both statistical and event-based profiling, is evident with the PCL subsystem (see Section \ref{sect:pcl}), as it allows the user to configure sampling based on (microarchitecture) events. This means that users are not constrained to only sampling based on CPU cycles.
