--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -285,6 +285,12 @@
    url = "https://sel4.systems/About/"
 }
 
+@online{YouTubeDotnetosCPUProfling,
+   author = "Sebastian Solnica",
+   title = "CPU Profiling inside out",
+   url = "https://www.youtube.com/watch?v=Oww5YO33w0w"
+}
+
 @online{AOSMicrokernelSlide,
    author = "Germot Heiser",
    title = "Microkernels: Reducing the Trusted Computing Base",
