--- a/thesis-a/report/relatedwork.tex
+++ b/thesis-a/report/relatedwork.tex
@@ -36,7 +36,7 @@ The PCL is a kernel-based subsystem that provides a framework for collecting and
 \begin{figure}[h!]
 \centering
     \includegraphics[width=0.8\linewidth]{report-a_perf_util_arch}
-    \caption{How how the perf utility relates to the PCL subsystem. Taken directly from Figure 1 in the CERN openlab, titled ``perf file format" \cite{CERN_openlab_perf_file_format}.}
+    \caption{How the perf utility relates to the PCL subsystem. Taken directly from Figure 1 in the CERN openlab, titled ``perf file format" \cite{CERN_openlab_perf_file_format}.}
     \label{fig:perf_util_arch}
 \end{figure}
 
