add content for acknowlegments section

--- a/thesis-a/report/acknowledgements.tex
+++ b/thesis-a/report/acknowledgements.tex
@@ -1,15 +1,7 @@
-\chapter*{Acknowledgements}\label{ack}
+\chapter*{Acknowledgements}\label{ch:ack}
 
-This work has been inspired by the labours of numerous academics in
-the Faculty of Engineering at UNSW who have endeavoured, over the years, to
-encourage students to present beautiful concepts using beautiful
-typography.
+I would like to firstly thank Gernot Heiser, for his guidance and expertise throughout Term 1. The same can be said for Peter Chubb, who has been a wonderful wealth of information regarding seL4 and the lower level details of the platform. I would like to thank the many individuals within the Trustworthy Systems (TS) team who have been immensely welcoming and generous with their time.
 
-Further inspiration has come from Donald Knuth who designed \TeX, for
-typesetting technical (and non-technical) material with elegance and
-clarity; and from Leslie Lamport who contributed \LaTeX, which makes
-\TeX\ usable by mortal engineers.
+Since I was not able to take AOS before starting this thesis, I owe much of my working knowledge about seL4 to James Archer and Courtney Darville. In the wider community, the numerous blog posts and talks by Brendan Gregg were immensely useful in understanding how to use the perf utility on Linux.
 
-John Zaitseff, an honours student in CSE at the time, created the
-first version of the UNSW Thesis \LaTeX\ class and the author of the
-current version is indebted to his work.
+Finally, I would like to thank my partner Olivia, for their unconditional support and sacrifice throughout my degree and this thesis. I am incredibly grateful.
