--- a/thesis-a/report/report-a.tex
+++ b/thesis-a/report/report-a.tex
@@ -26,11 +26,10 @@
 \thesisschool{School of Computer Science and Engineering}
 \thesisauthor{Cameron Bourke}
 \thesisZid{z5149731}
-\thesistopic{XX00}  % for undergrad theses only
-\thesisdegree{Bachelor of Engineering in Computer Engineering}
-%\thesisdegree{Doctor of Philosophy}
-\thesisdate{January 1970}
-\thesissupervisor{A/Prof.\ Person}% for undergrad theses only
+\thesisdegree{Bachelor of Computer Science (Honours)}
+\thesisdate{April 2022}
+\thesissupervisor{Gernot Heiser}% for undergrad theses only
+\thesisaccessorname{Peter Chubb}
 
 
 %% My own LaTeX macros, definitions, etc
@@ -69,6 +68,5 @@
 \bibliography{pubs}
 
 \include{appendix1}
-\include{appendix2}
 
 \end{document}
